@@ -1,6 +1,6 @@
-MD5 a0cb6add57eaff8d2fe979828933b1db bsfilter-1.0.6.ebuild 726
 MD5 178d36da0c3bcfe705408d931a954474 bsfilter-1.0.7.ebuild 726
-MD5 1431daf89948564704a6dbbfeebc0088 ChangeLog 1421
+MD5 fcdca64d586c60684cab39cbee2c6cdc bsfilter-1.0.9.ebuild 727
+MD5 c60a6778a098cf6e9388594fae7b736c ChangeLog 1570
 MD5 38f7e7e07cecf943cd078f4aef09fef1 metadata.xml 250
-MD5 187f0dd05ffc7f3a8b91b53b7a8e4179 files/digest-bsfilter-1.0.6 63
 MD5 124dd9f137b3dfe888712002c1bd7e23 files/digest-bsfilter-1.0.7 64
+MD5 6d1fbc996053ff0175aa35a1f1d97f07 files/digest-bsfilter-1.0.9 64
