@@ -1,14 +1,14 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/bsfilter/bsfilter-1.0.6.ebuild,v 1.2 2005/01/25 20:22:16 nakano Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/bsfilter/bsfilter-1.0.9.ebuild,v 1.1 2005/07/27 19:21:18 nakano Exp $
 
 DESCRIPTION="bayesian spam filter which distinguishes spam and non-spam mail"
 HOMEPAGE="http://bsfilter.org/index-e.html"
-SRC_URI="mirror://sourceforge.jp/bsfilter/12638/${P}.tgz"
+SRC_URI="mirror://sourceforge.jp/bsfilter/15724/${P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~ppc"
+KEYWORDS="~x86 ~ppc"
 IUSE="mecab chasen"
 
 DEPEND="virtual/ruby"
